syntax = "proto3";

import "google/protobuf/empty.proto";
import "yandex/cloud/priv/sensitive.proto";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/connman";

package yandex.cloud.priv.connman.v1;

message TLSParams {
    oneof tls_mode {
        google.protobuf.Empty disabled = 1;
        TLSConfig tls = 2;
    }
}

message TLSConfig {
    string ca_certificate = 1;
}

message Password {
    oneof value {
        string raw = 1 [(sensitive) = true];
        string lockbox = 2;
    }
}

message UserPasswordAuth {
    string user = 1;
    Password password = 2;
}
